# office-wordcount

./: .gitignore  LICENSE  README.md  pyproject.toml  validation_dataset.md
.github/workflows/: ci.yml  publish.yml
src/word_count/: __init__.py  cli.py  counter.py  formatter.py  patterns.py  statistics.py
tests/: test_cli.py  test_counter.py  test_formatter.py
