[project]
name = "office-wordcount"
version = "1.0.0"
description = "A word counting tool that handles mixed Asian and non-Asian text like Microsoft Office"
readme = "README.md"
license = "MIT"
authors = [{ name = "bebe3" }]
requires-python = ">=3.10"
keywords = ["word-count", "cjk", "unicode", "text-analysis", "office"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: General",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "regex>=2024.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
    "pre-commit>=4.5.1",
]

[project.scripts]
office-wordcount = "word_count.cli:main"

[project.urls]
Homepage = "https://github.com/bebe3/office-wordcount"
Repository = "https://github.com/bebe3/office-wordcount"
Issues = "https://github.com/bebe3/office-wordcount/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/word_count"]

[tool.hatch.build.targets.sdist]
exclude = [
    ".claude/",
    ".codex/",
    ".gemini/",
    ".github/",
    ".gitignore",
    ".pre-commit-config.yaml",
    "CLAUDE.md",
    "scripts/",
    "uv.lock",
    "validation_dataset.md",
]

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "TC003",  # move stdlib import into TYPE_CHECKING (using __future__ annotations)
]

[tool.ruff.lint.isort]
known-first-party = ["word_count"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "regex.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/word_count"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
